2008-11-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * Makefile.am:
   Add 'waf' to EXTRA_DIST.
 * src/search.c:
   Capture command's stderr and log it into the Debug messages window
   when a Find in Files search fails.


2008-11-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/search.c:
   Fix wrong highlighting of search results when using 'Mark' in
   the Find dialog.
   Fix possible crash when using the Find in Files dialog.
   Clear previously set search indicators before when using 'Mark' in
   the Find dialog.
 * data/filetypes.common:
   Change the default values for selection fore- and background colour
   to some sane values.


2008-11-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/main.c:
   Prompt the user for whether to move the configuration directory or
   just quit instead. This is useful if the user is already running an
   older binary of Geany and the second instance is newer.
 * src/utils.c, src/editor.c:
   Fix bug with utils_string_replace_all().
   Make utils_str_replace() call utils_string_replace_all() internally
   (for better memory management and allowing replacements to match
   search string).
 * src/editor.c:
   Add editor_insert_text_block() newline_indent_size argument to add
   fixed indentation on each newline, or -1 to read from insert_pos's
   line.
 * src/editor.c:
   Make auto_table() use editor_insert_text_block().


2008-11-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * HACKING, doc/geany.1.in, doc/geany.html, doc/geany.txt,
   plugins/demoplugin.c, src/geany.h, src/main.c, src/plugins.c,
   src/socket.c, src/utils.c, src/utils.h, src/win32.c, src/win32.h,
   tagmanager/options.c:
   Follow XDG Base Directory specification and use
   $XDG_CONFIG_HOME/geany (most often this is ~/.config/geany) as
   default configuration directory (closes #2166229).
   The previous configuration will be moved to the new location if
   the new directory doesn't exist yet.